# subscription-blocking-demo

./: README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: HeartbeatStrip.tsx  SyncCard.tsx
client/src/hooks/: useHeartbeat.ts  useHttpPing.ts  useSyncRun.ts
client/src/lib/: graphql.ts
scripts/: probe.mjs
server/: Cargo.toml
server/src/: db.rs  graphql.rs  main.rs
